adding the brain book and updating ui

--- a/index.html
+++ b/index.html
@@ -47,9 +47,23 @@
       </ul>
     </div>
     <footer>
-      <a href="https://github.com/DLSiem/deplist" target="_blank"
-        >Visit github repository</a
-      >
+      <div class="other-links">
+        <p class="head-links">Notes</p>
+        <a
+          class="footer-link"
+          href="https://dlsiem.notion.site/the-brain-book-f99a390f44944693b1157929dbabe8a1"
+          target="_blank"
+          >The brain book</a
+        >
+      </div>
+      <div class="other-links">
+        <a
+          class="footer-link"
+          href="https://github.com/DLSiem/deplist"
+          target="_blank"
+          >Visit github repository</a
+        >
+      </div>
     </footer>
   </body>
 </html>
